# trailer

./: .dockerignore  .gitignore  CHUNKING_RESEARCH.md  Dockerfile  README.md  generate_demo_gpx.py  gpx_features.py  main.py  model.py  predict.py  pyproject.toml  railpack.json  server.py  sweep_advanced.py  sweep_chunking.py  sweep_smoothing.py  sweep_strategies.py  train.py
src/trailer/: __init__.py  features.py  model.py  server.py
src/trailer/api/: __init__.py  app.py  schemas.py
src/trailer/cli/: __init__.py  generate_demo.py  predict.py  server.py  sweep_advanced.py  sweep_smoothing.py  sweep_strategies.py  train.py
src/trailer/data/: __init__.py  model.pkl
src/trailer/experiments/: __init__.py  cv.py  sweep_advanced.py  sweep_chunking.py  sweep_strategies.py
src/trailer/services/: __init__.py  predictor.py
tests/: test_model.py  test_package.py
